adjusted color design to be more pleasing blinky now starts outside of the ghost house ghosts can no longer reenter the ghost house ghosts no longer take on properties of pacman or power pellets when entering their grid squares added missing space to score display reduced size of power pellets and pac dots reverted ghosts to random movement method until search algorithm is implemented

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+body {
+    background-color: black;
+}
 
 .grid {
     display: flex;
@@ -6,6 +8,8 @@
     width: 560px;
     height: 560px;
     border: solid black;
+    background-color: black;
+    
 }
 
 .grid div {
@@ -14,8 +18,8 @@
 }
 
 .pac-dot {
-    background-color: green;
-    border: 5px solid white;
+    background-color: rgb(224, 192, 5);
+    border: 7px solid black;
     box-sizing: border-box;
 }
 
@@ -24,8 +28,12 @@
 }
 
 .power-pellet {
-    background-color: green;
+    background-color: rgb(224, 192, 5);
     border-radius: 10px;
+    box-sizing: border-box;
+    border: 2px solid black;
+    
+    
 }
 
 .pac-man {
@@ -36,24 +44,37 @@
 .blinky {
     background-color: red;
     border: 0px;
+    border-radius: 0px;
 }
 
 .pinky {
     background-color: pink;
     border: 0px;
+    border-radius: 0px;
 }
 
 .inky {
     background-color: cyan;
     border: 0px;
+    border-radius: 0px;
 }
 
 .clyde {
     background-color: orange;
     border: 0px;
+    border-radius: 0px;
 }
 
 .scared-ghost {
     background-color: aquamarine;
     border: 0px;
+}
+
+#score {
+    background-color: black;
+    color: white
+}
+
+h3 {
+    color: white;
 }
